--- a/RPS.html
+++ b/RPS.html
@@ -1,11 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock,Paper,Scissors</title>
-    <script type="text/javascript" src="rps.js"></script>
-  </head>
-  <body></body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock, Paper, Sciccor</title>
+</head>
+<body>
+  <h1>Rock Paper Scissors</h1>
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+  <div id="results">
+      <p id="result"></p>
+      <p id="score">Player: 0 | Computer: 0</p>
+      <p id="winner"></p>
+  </div>
+
+</body>
+<script src="rps.js"></script>
 </html>
